# RATBALL

./: .gitignore  BMICode.py  CamCap_TCP_Client.py  CamCap_TCP_ServerV2.py  RBStartup.service  README.md  audioRecordingClient.py  audioRecordingServer.py  ingestorCode.py  jetsonCode.py  launchAudioSystem.sh  main.py  opticalSensorClient.py  programStopClient.py  pyproject.toml  requirements.txt  settings.yaml  startOpticalSensors.sh  testClass.py  testDriver.py  testingBuffers.py  utils.py
ingestor/: main.py
models/components/3mf/: RB_base-manifold.sliced.gcode.3mf  RB_hemisphere-shell.sliced.gcode.3mf
models/components/step/: RB_base-manifold.step  RB_camera-enclosure_back.step  RB_camera-enclosure_clip.step  RB_camera-enclosure_front.step  RB_hemisphere-shell.step  RB_qwiicbus-enclosure_base.step  RB_qwiicbus-enclosure_lid.step  RB_sensor-harness-arc-tie_terminal.step  RB_sensor-harness-arc-tie_type1.step  RB_sensor-harness-arc-tie_type2.step
scripts/: hardware_test.py  install_opencv_with_gstreamer_cap.sh  launchAudioSystem.sh  opencv_paths.profile  startOpticalSensors.sh
src/: BMICode.py  Microphone.py  blankSensor.py  buffers.py  camera.py  camera_test.py  config.py  dataclasses.py  governors.py  ingestor.py  ingestorCode.py  jetsonCode.py  microphone.py  orchestrator.py  requirements.txt  sensor-client.py  sensor-server.py  sensor.py  settings.yaml  speaker.py  terminator.py  utils.py
src/ingestor/: ingestor.py  main.py
src/motion/: motion-client.py  motion-server.py
src/util/: logger.py
test/: camera_test.py  camera_test_server.py  hardware_test.py  sensor_test.py  speaker_test.py
(+3 files in other folders)
