[tool.poetry]
name = "ratball"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.4"
sparkfun-qwiic-i2c = "^2.0.0"
sparkfun-qwiic-otos = "^2.0.0"
pyalsaaudio = "^0.11.0"
pyyaml = "^6.0.2"
sounddevice = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

