[project]
name = "ratball"
version = "0.1.0"
description = "Motion tracking and audio/visual telemetry platform for the RATBALL omni-treadmill system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru==0.7.3",
    "matplotlib>=3.7.5",
    "numpy==1.26.4",
    "pyyaml>=6.0.2",
    "ruff==0.11.6",
    "sounddevice>=0.5.1",
    "sparkfun-qwiic-i2c>=2.0.0",
    "sparkfun-qwiic-otos>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.uv.sources]
sparkfun-qwiic-otos = { git = "https://github.com/sparkfun/qwiic_otos_py.git" }
sparkfun-qwiic-i2c = { git = "https://github.com/sparkfun/Qwiic_I2C_Py.git" }
